# c-backend/docs/swagger.json
@@ -69,6 +69,51 @@
                     }
                 }
             }
+        },
+        "/api/user/signUp": {
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "User"
+                ],
+                "summary": "SignUp",
+                "parameters": [
+                    {
+                        "description": "body",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/user.UserSignUpReq"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "ok",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/response.RestfulResponse"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "type": "string"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
@@ -106,6 +151,87 @@
                 },
                 "data": {},
                 "message": {
+                    "type": "string"
+                }
+            }
+        },
+        "user.UserCreateOrUpdateInfoReq": {
+            "type": "object",
+            "required": [
+                "id",
+                "nickname",
+                "region",
+                "username"
+            ],
+            "properties": {
+                "avatarUrl": {
+                    "type": "string"
+                },
+                "birthday": {
+                    "type": "string"
+                },
+                "createTime": {
+                    "type": "string"
+                },
+                "gender": {
+                    "type": "integer"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "mobile": {
+                    "type": "integer"
+                },
+                "nickname": {
+                    "type": "string"
+                },
+                "region": {
+                    "type": "string"
+                },
+                "updateTime": {
+                    "type": "string"
+                },
+                "username": {
+                    "type": "string"
+                }
+            }
+        },
+        "user.UserSignUpAccountReq": {
+            "type": "object",
+            "required": [
+                "captcha",
+                "email",
+                "password",
+                "username"
+            ],
+            "properties": {
+                "captcha": {
+                    "type": "string"
+                },
+                "email": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string"
+                },
+                "username": {
+                    "type": "string"
+                }
+            }
+        },
+        "user.UserSignUpReq": {
+            "type": "object",
+            "required": [
+                "type"
+            ],
+            "properties": {
+                "account": {
+                    "$ref": "#/definitions/user.UserSignUpAccountReq"
+                },
+                "info": {
+                    "$ref": "#/definitions/user.UserCreateOrUpdateInfoReq"
+                },
+                "type": {
                     "type": "string"
                 }
             }
